Blast and forcing